--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <input type="text" id="input">
-        <button id="addTodo">タスクを管理</button>
+        <button id="addTodo">Todoを追加</button>
     </div>
     <div>
         <ul id="todoList"></ul>
